--- a/Whiskey.ipynb
+++ b/Whiskey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "import numpy as np\n",
     "import requests\n",
     "from io import StringIO\n",
-    "import math"
+    "import math\n",
+    "import csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +37,7 @@
        "(283, 8)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +66,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -140,17 +141,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "count                                                   283\n",
-      "unique                                                  283\n",
-      "top       Black Maple Hill 23 Year Old Limited Edition K...\n",
-      "freq                                                      1\n",
+      "count                                 283\n",
+      "unique                                283\n",
+      "top       Amrut Fusion Single Malt Whisky\n",
+      "freq                                    1\n",
       "Name: Name, dtype: object\n",
       "\n",
       "\n",
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +205,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +273,7 @@
        "       nan, nan, nan, nan, nan, nan, nan, nan], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,14 +298,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(283, 4)\n"
+      "[40.   9.  40.  14.5]\n"
      ]
     }
    ],
@@ -314,13 +315,12 @@
     "price = np.array([med_price if math.isnan(xx) else xx for xx in x[:,3]]).reshape(-1,1)\n",
     "avb = np.array([med_avb if math.isnan(xx) else xx for xx in x[:,4]]).reshape(-1,1)\n",
     "age = np.array([med_age if math.isnan(xx) else xx for xx in x[:,5]]).reshape(-1,1)\n",
-    "num_att = np.concatenate((rating, price, avb, age), axis=1)\n",
-    "print(num_att.shape)"
+    "num_att = np.concatenate((rating, price, avb, age), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "(196, 4)"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,6 +403,277 @@
     "#delete all outlier rows\n",
     "num_atts = np.delete(num_att, idx, axis=0)\n",
     "num_atts.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 64.    30.    40.    14.5 ]\n",
+      " [ 64.    20.    40.    14.5 ]\n",
+      " [ 65.    24.    40.    14.5 ]\n",
+      " [ 65.    25.    40.    14.5 ]\n",
+      " [ 67.    50.    43.    15.  ]\n",
+      " [ 67.    60.    40.    14.5 ]\n",
+      " [ 67.    65.    40.    18.  ]\n",
+      " [ 67.    14.    40.     8.  ]\n",
+      " [ 68.    25.    40.    14.5 ]\n",
+      " [ 68.    12.    40.    14.5 ]\n",
+      " [ 69.    23.    40.    14.5 ]\n",
+      " [ 69.    23.    40.    12.  ]\n",
+      " [ 69.    20.    40.    14.5 ]\n",
+      " [ 70.    45.    43.    12.  ]\n",
+      " [ 70.    26.    40.    14.5 ]\n",
+      " [ 71.    27.    40.     8.  ]\n",
+      " [ 71.    50.    43.     8.  ]\n",
+      " [ 73.    84.    40.    18.  ]\n",
+      " [ 73.    90.    40.    12.  ]\n",
+      " [ 74.    90.    46.    14.5 ]\n",
+      " [ 74.    40.    40.    10.  ]\n",
+      " [ 74.    50.    45.    14.5 ]\n",
+      " [ 74.    58.    40.    19.  ]\n",
+      " [ 75.    85.    43.    10.  ]\n",
+      " [ 76.    36.    46.    14.5 ]\n",
+      " [ 76.    70.    46.    14.5 ]\n",
+      " [ 76.    16.    40.    14.5 ]\n",
+      " [ 76.    45.    40.    15.  ]\n",
+      " [ 77.    50.    43.    15.  ]\n",
+      " [ 77.    28.    40.    12.  ]\n",
+      " [ 77.    70.    46.    14.5 ]\n",
+      " [ 77.    20.    50.     8.  ]\n",
+      " [ 78.    75.    45.    18.  ]\n",
+      " [ 78.    17.    40.    14.5 ]\n",
+      " [ 78.    73.    40.    18.  ]\n",
+      " [ 79.    32.    40.    11.  ]\n",
+      " [ 79.    41.    46.    14.5 ]\n",
+      " [ 79.    26.    43.    12.  ]\n",
+      " [ 79.    27.    40.    14.5 ]\n",
+      " [ 80.    16.    43.    14.5 ]\n",
+      " [ 80.    63.    43.    16.  ]\n",
+      " [ 80.    25.    43.    12.  ]\n",
+      " [ 80.    36.    40.     8.  ]\n",
+      " [ 81.    20.    40.    14.5 ]\n",
+      " [ 81.    43.    46.    14.5 ]\n",
+      " [ 81.    58.    43.    14.5 ]\n",
+      " [ 81.    20.    40.    14.5 ]\n",
+      " [ 81.    35.    42.5   14.5 ]\n",
+      " [ 81.    25.    40.    14.5 ]\n",
+      " [ 81.    40.    40.    14.5 ]\n",
+      " [ 81.    60.    42.    14.5 ]\n",
+      " [ 81.    55.    41.    14.5 ]\n",
+      " [ 81.    69.    40.    10.  ]\n",
+      " [ 81.    25.    40.    14.5 ]\n",
+      " [ 81.    17.    41.     8.  ]\n",
+      " [ 81.    50.    40.    10.  ]\n",
+      " [ 81.    28.    40.    14.5 ]\n",
+      " [ 82.    50.    40.    14.5 ]\n",
+      " [ 82.    70.    40.    14.5 ]\n",
+      " [ 82.   100.    43.    18.  ]\n",
+      " [ 82.    19.    50.    14.5 ]\n",
+      " [ 82.    17.    40.    14.5 ]\n",
+      " [ 82.   100.    43.    19.  ]\n",
+      " [ 83.    28.    46.    14.5 ]\n",
+      " [ 83.    33.    43.    14.5 ]\n",
+      " [ 83.    42.    46.    14.5 ]\n",
+      " [ 83.    70.    45.    14.5 ]\n",
+      " [ 83.    35.    47.    14.5 ]\n",
+      " [ 83.    65.    43.    14.  ]\n",
+      " [ 83.    60.    43.    10.  ]\n",
+      " [ 84.    25.    40.    12.  ]\n",
+      " [ 84.    47.    40.    10.  ]\n",
+      " [ 84.   100.    40.    15.  ]\n",
+      " [ 84.    43.    40.    12.  ]\n",
+      " [ 85.    34.    46.    14.5 ]\n",
+      " [ 85.    68.    43.    16.  ]\n",
+      " [ 85.    98.    54.7   18.  ]\n",
+      " [ 85.    65.    50.    14.5 ]\n",
+      " [ 85.    39.    40.    10.  ]\n",
+      " [ 85.    95.    46.    15.  ]\n",
+      " [ 85.    36.    40.    14.5 ]\n",
+      " [ 86.    61.    40.    14.5 ]\n",
+      " [ 86.    24.    40.    14.5 ]\n",
+      " [ 86.    50.    40.    10.  ]\n",
+      " [ 86.    43.    43.    12.  ]\n",
+      " [ 86.    43.    43.    12.  ]\n",
+      " [ 86.    20.    43.     8.  ]\n",
+      " [ 86.    24.    45.    14.5 ]\n",
+      " [ 86.    40.    40.    12.  ]\n",
+      " [ 86.    49.    47.8   15.  ]\n",
+      " [ 87.    20.    45.    14.5 ]\n",
+      " [ 87.    50.    40.    12.  ]\n",
+      " [ 87.    60.    43.    10.  ]\n",
+      " [ 87.    50.    43.    10.  ]\n",
+      " [ 87.    49.    47.    14.5 ]\n",
+      " [ 87.    53.    50.    10.  ]\n",
+      " [ 87.    40.    45.    14.5 ]\n",
+      " [ 88.    32.    40.    14.5 ]\n",
+      " [ 88.    60.    40.    14.5 ]\n",
+      " [ 88.   100.    43.    15.  ]\n",
+      " [ 88.    35.    40.    14.5 ]\n",
+      " [ 88.    48.    43.    14.5 ]\n",
+      " [ 88.    40.    40.    14.5 ]\n",
+      " [ 88.    45.    46.    14.5 ]\n",
+      " [ 88.    25.    42.    14.5 ]\n",
+      " [ 88.    48.    40.    14.5 ]\n",
+      " [ 88.    40.    40.    12.  ]\n",
+      " [ 88.    61.    46.    14.5 ]\n",
+      " [ 88.    75.    47.    14.5 ]\n",
+      " [ 88.    21.    50.    14.5 ]\n",
+      " [ 88.    53.    43.    12.  ]\n",
+      " [ 88.   128.    43.    17.  ]\n",
+      " [ 88.    27.    45.    14.5 ]\n",
+      " [ 88.    34.    45.    14.5 ]\n",
+      " [ 88.    50.    47.    12.  ]\n",
+      " [ 88.   125.    50.    15.  ]\n",
+      " [ 89.    65.    43.    16.  ]\n",
+      " [ 89.    35.    40.    12.  ]\n",
+      " [ 89.    90.    47.    18.  ]\n",
+      " [ 90.   140.    40.    14.5 ]\n",
+      " [ 90.    79.    43.    18.  ]\n",
+      " [ 90.    70.    43.    15.  ]\n",
+      " [ 90.    45.    43.    12.  ]\n",
+      " [ 90.    37.    54.1   14.5 ]\n",
+      " [ 90.    70.    43.    18.  ]\n",
+      " [ 90.    55.    40.    15.  ]\n",
+      " [ 90.    90.    47.    17.  ]\n",
+      " [ 90.    29.    43.    10.  ]\n",
+      " [ 91.    64.    40.    16.  ]\n",
+      " [ 91.    75.    46.    14.5 ]\n",
+      " [ 92.    67.    46.    15.  ]\n",
+      " [ 92.    94.    46.    17.  ]\n",
+      " [ 92.    70.    40.    14.5 ]\n",
+      " [ 92.    40.    40.    12.  ]\n",
+      " [ 92.    47.    46.3   12.  ]\n",
+      " [ 92.    45.    40.    15.  ]\n",
+      " [ 92.    57.    45.    17.  ]\n",
+      " [ 92.   109.    43.    17.  ]\n",
+      " [ 92.    47.    48.    14.5 ]\n",
+      " [ 93.    39.    40.    10.  ]\n",
+      " [ 93.    35.    45.    10.  ]\n",
+      " [ 93.    32.    45.    14.5 ]\n",
+      " [ 94.   108.    46.3   15.  ]\n",
+      " [ 94.   107.    43.    18.  ]\n",
+      " [ 94.    60.    46.    16.  ]\n",
+      " [ 94.   115.    46.    16.  ]\n",
+      " [ 94.    68.    45.82  12.  ]\n",
+      " [ 94.    80.    43.    18.  ]\n",
+      " [ 94.    45.    43.    12.  ]\n",
+      " [ 94.    42.    50.5   14.5 ]\n",
+      " [ 95.    47.    40.    10.  ]\n",
+      " [ 95.    55.    46.    12.  ]\n",
+      " [ 96.    70.    45.    14.5 ]\n",
+      " [ 96.    50.    50.05  12.  ]\n",
+      " [ 96.    80.    46.2   14.5 ]\n",
+      " [ 96.    84.    46.    14.5 ]\n",
+      " [ 96.    30.    47.5   14.5 ]\n",
+      " [ 96.    43.    40.    12.  ]\n",
+      " [ 96.    89.    43.    15.  ]\n",
+      " [ 96.    62.    46.    18.  ]\n",
+      " [ 96.    73.    43.    17.  ]\n",
+      " [ 96.    30.    40.    12.  ]\n",
+      " [ 96.    79.    43.    18.  ]\n",
+      " [ 96.    43.    46.3   12.  ]\n",
+      " [ 96.    54.    40.    14.5 ]\n",
+      " [ 96.    48.    43.    15.  ]\n",
+      " [ 96.    25.    40.    14.5 ]\n",
+      " [ 96.    30.    40.    12.  ]\n",
+      " [ 96.    40.    40.    12.  ]\n",
+      " [ 96.    65.    48.    16.  ]\n",
+      " [ 96.    64.    40.    18.  ]\n",
+      " [ 96.    40.    46.    14.5 ]\n",
+      " [ 99.    35.    40.    12.  ]\n",
+      " [ 99.   120.    43.    18.  ]\n",
+      " [ 99.    42.    40.    10.  ]\n",
+      " [ 99.    80.    46.    10.  ]\n",
+      " [ 99.    92.    46.3   18.  ]\n",
+      " [ 99.   107.    48.    18.  ]\n",
+      " [ 99.    45.    40.    12.  ]\n",
+      " [ 99.   100.    43.    18.  ]\n",
+      " [ 99.    60.    43.    14.  ]\n",
+      " [ 99.    70.    43.    14.5 ]\n",
+      " [ 99.    50.    40.    17.  ]\n",
+      " [ 99.    45.    40.    12.  ]\n",
+      " [ 99.    45.    48.    14.5 ]\n",
+      " [ 99.    70.    43.    15.  ]\n",
+      " [ 99.    11.    40.    14.5 ]\n",
+      " [ 99.    58.    53.5   15.  ]\n",
+      " [ 99.    80.    54.2   14.5 ]\n",
+      " [100.    72.    46.    10.  ]\n",
+      " [ 88.    92.    43.    12.  ]\n",
+      " [ 88.     8.    43.    14.5 ]\n",
+      " [ 88.    50.    43.    14.5 ]\n",
+      " [ 88.    50.    43.    10.  ]\n",
+      " [ 88.    30.    46.    12.  ]\n",
+      " [ 88.    40.    45.    18.  ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(num_atts) # [Rating,Price,ABV,Age]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "196"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(num_atts[189][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boxplot_rating = []\n",
+    "for o in range(0,num_atts.shape[0]):\n",
+    "    boxplot_rating.append(num_atts[o][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing complete\n"
+     ]
+    }
+   ],
+   "source": [
+    "myFile = open('Whiskey.csv', 'w')\n",
+    "with myFile:\n",
+    "    writer = csv.writer(myFile)\n",
+    "    writer.writerow(['Rating','Price','ABV','Age'])\n",
+    "    writer.writerows(num_atts)"
    ]
   },
   {
