--- a/Whiskey.ipynb
+++ b/Whiskey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,10 +149,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "count                                  283\n",
-      "unique                                 283\n",
-      "top       Talisker 1992 Single Malt Scotch\n",
-      "freq                                     1\n",
+      "count                                     283\n",
+      "unique                                    283\n",
+      "top       Old Parr 12 Year Old Blended Scotch\n",
+      "freq                                        1\n",
       "Name: Name, dtype: object\n",
       "\n",
       "\n",
@@ -170,10 +170,10 @@
       "Name: Category, dtype: object\n",
       "\n",
       "\n",
-      "count          283\n",
-      "unique         153\n",
-      "top       Balvenie\n",
-      "freq             7\n",
+      "count         283\n",
+      "unique        153\n",
+      "top       Kavalan\n",
+      "freq            7\n",
       "Name: Brand, dtype: object\n",
       "\n",
       "\n"
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +826,7 @@
        "       [0.66666667, 0.24242424, 0.34013605, 0.90909091]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -873,7 +873,7 @@
     "with myFile:\n",
     "    writer = csv.writer(myFile)\n",
     "    writer.writerow(['Rating','Price','ABV','Age'])\n",
-    "    writer.writerows(num_atts)"
+    "    writer.writerows(norm_num_atts)"
    ]
   }
  ],
