decision tree classifier

--- a/phase2.ipynb
+++ b/phase2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,13 +17,15 @@
     "import matplotlib.pyplot as plt\n",
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as go\n",
+    "from sklearn import tree\n",
+    "from sklearn.model_selection import train_test_split\n",
     "py.sign_in('pongngai', 'nkOGg4Ym3J1JFb6yu27O')\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +125,7 @@
        "4   0.125  0.428571  0.000000  0.014320  0.000000  0.467742"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,80 +136,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = wk.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cat_rating = np.array(['low' if xx <= 1/3 else 'medium' if xx < 2/3 else 'high' for xx in x[:,0]])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = wk.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.array(['low' if xx <= 1/3 else 'medium' if xx < 2/3 else 'high' for xx in data[:,0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = data[:,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array(['low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low',\n",
-       "       'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low', 'low',\n",
-       "       'low', 'low', 'low', 'low', 'low', 'low', 'low', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'medium', 'medium', 'medium', 'medium',\n",
-       "       'medium', 'medium', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high', 'high', 'high', 'high', 'high', 'high',\n",
-       "       'high', 'high', 'high'], dtype='<U6')"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(221, 5) (221,)\n"
+     ]
     }
    ],
    "source": [
-    "cat_rating"
+    "print(x.shape, y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(176, 5) (176,)\n",
+      "(45, 5) (45,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, shuffle=True)\n",
+    "\n",
+    "print(x_train.shape, y_train.shape)\n",
+    "print(x_test.shape, y_test.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            splitter='best')"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "new_x = np.concatenate((cat_rating.reshape(-1,1), x[:,1:]),axis=1)"
+    "clf = tree.DecisionTreeClassifier()\n",
+    "clf.fit(x_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['high'] medium\n",
+      "['medium'] low\n",
+      "['high'] medium\n",
+      "['medium'] high\n",
+      "['high'] low\n",
+      "['medium'] low\n",
+      "['medium'] high\n",
+      "['medium'] low\n",
+      "['high'] low\n",
+      "['high'] medium\n",
+      "['medium'] high\n",
+      "['medium'] high\n",
+      "['low'] high\n",
+      "['medium'] high\n",
+      "['high'] medium\n",
+      "['high'] low\n",
+      "['high'] medium\n",
+      "['medium'] high\n",
+      "['medium'] high\n",
+      "['high'] medium\n",
+      "['medium'] high\n",
+      "['medium'] high\n",
+      "['medium'] high\n",
+      "['high'] medium\n",
+      "['high'] low\n",
+      "['low'] medium\n",
+      "['high'] medium\n",
+      "accuracy = 40.0 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for i in range(len(x_test)):\n",
+    "    if clf.predict(x_test[i].reshape(1, -1)) == y_test[i]:\n",
+    "        count +=1\n",
+    "    else:\n",
+    "        print(clf.predict(x_test[i].reshape(1, -1)), y_test[i])\n",
+    "        \n",
+    "print('accuracy =', count/x_test.shape[0]*100, \"%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
