--- a/Whiskey.ipynb
+++ b/Whiskey.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,25 +12,27 @@
     "from io import StringIO\n",
     "import math\n",
     "import csv\n",
-    "from sklearn.preprocessing import MinMaxScaler, LabelEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler, LabelEncoder, StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.decomposition import PCA\n",
     "import matplotlib.pyplot as plt\n",
     "import plotly.plotly as py\n",
     "import plotly.graph_objs as go\n",
+    "from sklearn import tree\n",
     "py.sign_in('pongngai', 'nkOGg4Ym3J1JFb6yu27O')\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Read CSV file from the url to DataFrame\n",
     "url = \"https://github.com/Brunel-Visualization/Brunel/raw/master/python/examples/data/whiskey.csv\"\n",
     "s = requests.get(url).text\n",
-    "whiskey = pd.read_csv(StringIO(s))"
+    "wk = pd.read_csv(StringIO(s))"
    ]
   },
   {
@@ -1261,6 +1263,470 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wk = wk.drop('Age', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wk = wk.drop('Brand', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wk = wk.drop('Name', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wk = wk.dropna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>ABV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>260.000000</td>\n",
+       "      <td>260.000000</td>\n",
+       "      <td>260.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>85.350000</td>\n",
+       "      <td>73.388462</td>\n",
+       "      <td>44.528154</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10.828097</td>\n",
+       "      <td>84.056787</td>\n",
+       "      <td>5.864605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>35.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>81.000000</td>\n",
+       "      <td>33.500000</td>\n",
+       "      <td>40.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>88.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>43.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>94.000000</td>\n",
+       "      <td>80.000000</td>\n",
+       "      <td>46.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>850.000000</td>\n",
+       "      <td>68.200000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Rating       Price         ABV\n",
+       "count  260.000000  260.000000  260.000000\n",
+       "mean    85.350000   73.388462   44.528154\n",
+       "std     10.828097   84.056787    5.864605\n",
+       "min     40.000000    9.000000   35.500000\n",
+       "25%     81.000000   33.500000   40.000000\n",
+       "50%     88.000000   50.000000   43.000000\n",
+       "75%     94.000000   80.000000   46.000000\n",
+       "max    100.000000  850.000000   68.200000"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wk.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>ABV</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>40.0</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Blended</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>47.0</td>\n",
+       "      <td>Ireland</td>\n",
+       "      <td>Blended</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>48.0</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Blended</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>53.0</td>\n",
+       "      <td>Canada</td>\n",
+       "      <td>Blended</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>54.0</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Blended</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Rating  Country Category  Price   ABV\n",
+       "0    40.0   Canada  Blended    9.0  40.0\n",
+       "2    47.0  Ireland  Blended   20.0  40.0\n",
+       "4    48.0   Canada  Blended   12.0  40.0\n",
+       "6    53.0   Canada  Blended   12.0  40.0\n",
+       "8    54.0      USA  Blended   20.0  40.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wk.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "en = LabelEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = wk.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x[:,1] = en.fit_transform(x[:,1])\n",
+    "x[:,2] = en.fit_transform(x[:,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(260, 5)"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(260, 4) (260,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = x[:,0]\n",
+    "x = x[:,1:]\n",
+    "print(x.shape, y.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:590: DataConversionWarning:\n",
+      "\n",
+      "Data with input dtype object was converted to float64 by MinMaxScaler.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y = MinMaxScaler().fit_transform(y.reshape(-1, 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Anaconda3\\lib\\site-packages\\sklearn\\utils\\validation.py:590: DataConversionWarning:\n",
+      "\n",
+      "Data with input dtype object was converted to float64 by MinMaxScaler.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = MinMaxScaler().fit_transform(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0. 0. 0. 0.] [1. 1. 1. 1.]\n",
+      "0.0 1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.min(axis=0), x.max(axis=0))\n",
+    "print(y.min(), y.max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y = np.array(['low' if i <= 0.33 else \"medium\" if i <= 0.66 else \"high\" for i in y])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(208, 4) (208,)\n",
+      "(52, 4) (52,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, random_state=42,test_size=0.2, shuffle=True)\n",
+    "print(x_train.shape, y_train.shape)\n",
+    "print(x_test.shape, y_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clf = tree.DecisionTreeClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier(class_weight=None, criterion='gini', max_depth=None,\n",
+       "            max_features=None, max_leaf_nodes=None,\n",
+       "            min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, presort=False, random_state=None,\n",
+       "            splitter='best')"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['high'] medium\n",
+      "['medium'] high\n",
+      "['medium'] high\n",
+      "['high'] medium\n",
+      "['high'] low\n",
+      "['medium'] high\n",
+      "['low'] medium\n",
+      "['high'] medium\n",
+      "['high'] medium\n",
+      "['medium'] high\n",
+      "['medium'] high\n",
+      "['high'] medium\n",
+      "['low'] medium\n",
+      "accuracy: 75.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for i in range(x_test.shape[0]):\n",
+    "    if clf.predict(x_test[i].reshape(1, -1)) == y_test[i]:\n",
+    "        count += 1\n",
+    "    else:\n",
+    "        \n",
+    "print(\"accuracy:\", count/x_test.shape[0]*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1283,7 +1749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
