--- a/dtree.ipynb
+++ b/dtree.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
        "max    100.000000  850.000000   68.200000   40.000000"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "4  40.0  NaN    Canadian Mist  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +364,7 @@
        "8    54.0      USA  Blended   20.0  40.0"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,17 +399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7999999999999999 0.04875148632580261 0.22935779816513757\n",
-      "0.3583333333333336 1.2249999999999999\n",
-      "-0.0538049940546968 0.1673602853745541\n",
-      "-0.1376146788990822 0.5963302752293573\n",
+      "88.0 50.0 43.0\n",
+      "61.5 113.5\n",
+      "-36.25 149.75\n",
+      "31.0 55.0\n",
       "(211, 5)\n"
      ]
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -462,6 +462,14 @@
       " [0.97222222 0.75       0.57142857 0.53488372 0.97395833]\n",
       " [1.         0.5        0.85714286 0.47286822 0.546875  ]]\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/anaconda3/lib/python3.6/site-packages/sklearn/utils/validation.py:590: DataConversionWarning: Data with input dtype object was converted to float64 by MinMaxScaler.\n",
+      "  warnings.warn(msg, DataConversionWarning)\n"
+     ]
     }
    ],
    "source": [
@@ -471,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +525,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -529,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +553,7 @@
       "['high'] medium\n",
       "['medium'] low\n",
       "['medium'] low\n",
-      "['high'] medium\n",
+      "['medium'] medium\n",
       "['high'] medium\n",
       "['medium'] medium\n",
       "['medium'] low\n",
@@ -594,7 +602,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
