--- a/dtree.ipynb
+++ b/dtree.ipynb
@@ -2,25 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import requests\n",
-    "from io import StringIO\n",
+    "from io import StringIO \n",
     "import math\n",
     "import csv\n",
     "from sklearn.preprocessing import MinMaxScaler, LabelEncoder, StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.decomposition import PCA\n",
+    "from sklearn import tree\n",
+    "from sklearn.tree import DecisionTreeClassifier, export_graphviz\n",
+    "from matplotlib import pyplot as plt\n",
+    "import graphviz\n",
+    "import pydotplus\n",
     "from sklearn import tree"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +140,7 @@
        "max    100.000000  850.000000   68.200000   40.000000"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +261,7 @@
        "4  40.0  NaN    Canadian Mist  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +369,7 @@
        "8    54.0      USA  Blended   20.0  40.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +508,6 @@
    "source": [
     "x = data[:,1:]\n",
     "y = label\n",
-    "\n",
     "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.2, random_state=42, shuffle=True)\n",
     "print(x_train.shape, y_train.shape)\n",
     "print(x_test.shape, y_test.shape)"
@@ -511,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +529,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -549,11 +553,11 @@
       "['low'] medium\n",
       "['medium'] medium\n",
       "['low'] low\n",
-      "['high'] medium\n",
-      "['high'] medium\n",
-      "['medium'] low\n",
-      "['medium'] low\n",
       "['medium'] medium\n",
+      "['low'] medium\n",
+      "['medium'] low\n",
+      "['medium'] low\n",
+      "['high'] medium\n",
       "['high'] medium\n",
       "['medium'] medium\n",
       "['medium'] low\n",
@@ -577,6 +581,29 @@
     "        \n",
     "print(\"acc:\", count/x_test.shape[0])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dt = clf.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
